# any2ebook

./: .gitignore  Makefile  config.yaml  pyproject.toml  readme.md
.github/workflows/: ci.yml
any2ebook/: .gitignore  clippings_ingest.py  clippings_to_epub.py  config.yaml  config_sample.yaml  create_obsidian_db.py  gui.py  html2ebook.py  main.py  pyproject.toml
src/any2ebook/: any2ebook.py  clippings_ingest.py  clippings_to_epub.py  config.py  config_sample.yaml  create_obsidian_db.py  db.py  gui.py  html2ebook.py  paths.py
src/tiny-capture-extension/: background.js  export.html  export.js  manifest.json  popup.html  popup.js
tests/: config_sample_test.yaml  test_any2ebook_cli.py  test_clippings_ingest.py  test_clippings_to_epub.py  test_config.py  test_db_migrations.py  test_smoke.py
