[project]
name = "any2ebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ebooklib>=0.20",
    "pyyaml>=6.0.3",
    "readabilipy>=0.3.0",
    "requests>=2.32.5",
    "pyqt5==5.15.11"
]

[tool.uv]
constraint-dependencies = [
    "pyqt5-qt5<=5.15.2; sys_platform == 'win32'",
]

[project.scripts]
any2ebook = "any2ebook.any2ebook:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
any2ebook = ["*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]
