[project]
name = "any2ebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ebooklib>=0.20",
    "pyyaml>=6.0.3",
    "readabilipy>=0.3.0",
    "requests>=2.32.5",
    "pyqt5==5.15.11"
]

[tool.uv]
constraint-dependencies = [
    "pyqt5-qt5<=5.15.2; sys_platform == 'win32'",
]